# rviz_plugin_moveit_collisionmap

./: CMakeLists.txt  package.xml  plugin_description.xml
include/: rviz_plugin_moveit_collisionmap_display.h  rviz_plugin_moveit_collisionmap_visual.h
src/: rviz_plugin_moveit_collisionmap_display.cpp  rviz_plugin_moveit_collisionmap_visual.cpp
